# INDI

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  environment-cpu.yml  environment.yml  main.py  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  requirements_linux.txt  requirements_mac.txt  requirements_mac_ai.txt  requirements_no_ai.txt  requirements_win.txt  settings.yaml  settings_template.yaml
.github/workflows/: ci.yml
assets/app_icon/: app_icon.afdesign  app_icon.icns  convert_to_icon.sh  run_indi.command
assets/icons/: epicardium.afdesign  ha_md.afdesign
assets/images/: diagram.md  summary_figure.afdesign
assets/ui_icons/: ha_md.afdesign  insertion_points.afdesign  swap_images.afdesign
conda_requirements/: environment-cpu-invivo.yml  environment-cpu.yml
docs/: Pipeline.md  Segmentation_Slicer.md  YAML_settings.md  documentation.md  index.md  workflow.afdesign
docs/assets/images/: summary_figure.afdesign
docs/reference/: indi.md
extensions/: anon_fields.csv  complex_averaging.py  crop.py  crop_fov.py  dicom_header_collect.yaml  dwis_classifier.py  extension_base.py  extensions.py  folder_loop_initial_setup.py  get_eigensystem.py  get_fa_md.py  get_tensor_orientation_maps.py  heart_segmentation.py  image_registration.py  initial_setup.py  manual_lv_segmentation.py  montage_script.sh  montage_script_windows.ps1  phase_correction_for_complex_averaging.py  polygon_selector.py  read_and_pre_process_data.py  remove_outliers.py  rotation.py  select_outliers.py  select_outliers_ai.py  tensor_fittings.py  u_net_segmentation.py  uformer_denoising.py
extensions/crop/: crop.py
extensions/image_registration_recipes/: Elastix_affine.txt  Elastix_bspline.txt  Elastix_bspline_ex_vivo.txt  Elastix_groupwise.txt  Elastix_groupwise_not_working.txt  Elastix_rigid.txt
extensions/metrics/: metrics.py
extensions/read_data/: bruker.py  dicom_to_h5_csv.py  fields_to_keep.yaml  read_and_pre_process_data.py
extensions/registration_ex_vivo/: registration.py
extensions/rotation/: rotation.py
extensions/segmentation/: heart_segmentation.py  manual_segmentation.py  manual_tissue_segmentation.py  polygon_selector.py  tissue_segmentation.py
extensions/select_outliers/: select_outliers.py
extensions/tensor_fittings/: tensor_fittings.py
extensions/uformer_tensor_denoising/: discriminator.py  gan_wrapper.py  uformer.py  uformer_tensor_denoising.py
extensions/useful_scripts/: fish_dtcmr_dicoms.py
extensions/utils/: dicom_to_nii_h5_csv.py  fish_dtcmr_dicoms.py  read_h5.py
old_requirements_info_backup/conda_requirements/: environment-gpu.yml
old_requirements_info_backup/pip/: requirements.in  requirements_ai.in  requirements_mac.txt  requirements_win.txt
src/indi/extensions/: complex_averaging.py  crop_fov.py  dwis_classifier.py  export_vectors_tensors_vtk.py  extensions.py  find_rr_outliers.py  fingerprinting.py  folder_loop_initial_setup.py  get_eigensystem.py  get_fa_md.py  get_tensor_orientation_maps.py  ha_line_profiles.py  heart_segmentation.py  image_denoising.py  image_registration.py  initial_setup.py  manual_lv_segmentation.py  montage_script_windows.ps1  nn_tensor_fit.py  phase_correction_for_complex_averaging.py  polygon_selector.py  select_outliers.py  select_outliers_ai.py  tensor_denoise.py  tensor_fittings.py  u_net_segmentation.py  uformer_denoising.py
src/indi/scripts/: copy_segmentation.py  delete_empty_folders.py  gui.py  main.py  remove_repetitions.py  rename_python_folder.py  select_outliers.py
tests/: extensions_test.py  ha_lines_profiles_test.py  read_and_pre_process_data_test.py  rotation_test.py  tensor_fittings_test.py  test_crop.py  test_read_and_pre_process_data.py  test_reg.py  test_rotation.py
tests/data/: DT.npz  cardiac_coordinates.npz  mask_3c.npz
tests/data/dicom_data/: MR_0000_0000.dcm  MR_0000_0001.dcm  MR_0000_0002.dcm  MR_0000_0003.dcm  MR_0000_0004.dcm  MR_0000_0005.dcm  MR_0000_0006.dcm  MR_0000_0007.dcm  MR_0000_0008.dcm  MR_0000_0009.dcm  MR_0000_0010.dcm  MR_0000_0011.dcm  MR_0000_0012.dcm  MR_0000_0013.dcm  MR_0000_0014.dcm  (+41 more)
(+446 files in other folders)
